Correct image stretching

--- a/src/app/render/render.component.css
+++ b/src/app/render/render.component.css
@@ -54,6 +54,7 @@ div {
 .ir-render-selected-project img {
     max-width: 100%;
     max-height: 100%;
+    object-fit: contain;
 }
 
 .ir-render-selected-project-arrow {
@@ -101,6 +102,7 @@ div {
 .ir-render-projects-list-project img {
     max-width: 100%;
     max-height: 100%;
+    object-fit: contain;
 }
 
 .ir-render-projects-list-project-details {
@@ -130,7 +132,7 @@ div {
     justify-content: center;
     font-size: 2vw;
     font-weight: 400;
-    margin-bottom: 1vh;
+    margin: 4vh 0 2vh 0;
 }
 
 .ir-render-programs-list {
